# jayjay

./: .env.local  package-lock.json  package.json
app/: layout.tsx  page.tsx
app/api/auth/[...nextauth]/: route.ts
app/components/: AppLayout.tsx  ListingsView.tsx  MapComponent.tsx
app/contexts/: AuthContext.tsx  ConversationContext.tsx
app/data/: mockProperties.ts
app/lib/: mcpClient.ts
app/listing/[id]/: page.tsx
server/: .env.example  .gitignore  CLAUDE.md  DEDALUS_DEPLOYMENT.md  DEPLOYMENT_SUMMARY.md  FRONTEND_DEPLOYMENT.md  QUICKSTART_DEDALUS.md  README.md  dedalus_client_example.py  main.py  mcp_config.json  pyproject.toml  server.py  verify_mcp.py
